syntax = "proto3";
package net.proto;

import "message_type.proto";

option java_multiple_files = true;
option java_package = "com.musicocracy.fpgk.net.proto";
option java_outer_classname = "BasicReplyProto";

message BasicReply {
    MessageType replying_to = 1;
    bool success = 2;
    string message = 3; // optional error message if success == false
}
